tests/snapshots/run_wpt_conformance__litert_expand_float32_2D_tensor_to_2D__2nd_dimension_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
expand.https.any.js expand float32 2D tensor to 2D (2nd dimension), litert
 Failed to build graph: failed to compile model: Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    expandInput: f32[4, 1];
  }

  nodes {
    [expandOutput] = expand(expandInput, label="");
  }

  outputs { expandOutput; }
}
